- Added upload-service, encode-service, video-catalog-service, video-catalog-db, and rabbitmq to docker-compose.yml. - Updated Makefile commands to include new services, updated existing commands, and added list-images and delete-images commands for clean up.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,19 @@
 microservices-api-gateway/
 microservices-authentication-service/
 microservices-user-service/
-microservices-video-service/
+microservices-upload-service/
+microservices-encode-service/
+microservices-video-catalog-service/
 
 # Ignore docker volumes data
 docker/microservices-redis/data/*
 !docker/microservices-redis/data/.gitkeep
 
+docker/microservices-rabbitmq/data/*
+!docker/microservices-rabbitmq/data/.gitkeep
+
 docker/microservices-user-db/data/*
 !docker/microservices-user-db/data/.gitkeep
+
+docker/microservices-video-catalog-db/data/*
+!docker/microservices-video-catalog-db/data/.gitkeep
