- Updated readme. - Added init container in Deployment.yaml to run database migrations for user-service.

--- a/kubernetes/microservices/user-service/Deployment.yaml
+++ b/kubernetes/microservices/user-service/Deployment.yaml
@@ -15,6 +15,22 @@ spec:
       labels:
         app: user-service
     spec:
+      initContainers:
+        - name: user-service-run-migrations
+          image: kind-registry:5000/user-service:1.0
+          command:
+            [
+              "node",
+              "node_modules/.bin/typeorm",
+              "migration:run",
+              "-d",
+              "dist/config/migration.typeorm.js",
+            ]
+          envFrom:
+            - configMapRef:
+                name: user-service
+            - secretRef:
+                name: user-service
       containers:
         - name: user-service
           image: kind-registry:5000/user-service:1.0
