--- a/kubernetes/microservices/upload-service/Secret.yaml
+++ b/kubernetes/microservices/upload-service/Secret.yaml
@@ -4,9 +4,9 @@ metadata:
   name: upload-service
   namespace: microservices
 data:
-  AWS_ACCESS_KEY: key
-  AWS_SECRET_KEY: secret
-  AWS_S3_BUCKET: bucket
+  AWS_ACCESS_KEY: ""
+  AWS_SECRET_KEY: ""
+  AWS_S3_BUCKET: ""
 
   AMQP_USERNAME: ZGVmYXVsdA== #base64 for "default"
   AMQP_PASSWORD: ZGVmYXVsdA== #base64 for "default"
