- Added Alloy to scrape logs from microservices and push to Loki. - Updated Microservices dashboard in Grafana and added Microservices logs dashboard to visualize Loki logs. - Added healthchecks to all microservices, databases, and broker in docker-compose to properly start each service once it's dependent service is healthy. - Updated Grafana dashboards section and added jaeger tracing section in readme.md.

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,7 @@ docker/prometheus/data/*
 docker/loki/data/*
 !docker/loki/data/.gitkeep
 
+docker/alloy/data/*
+!docker/alloy/data/.gitkeep
+
 kubernetes/microservices/*/Secret.dev.yaml
